# perg

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
perg/: CMakeLists.txt  block_list.h  buffer.h  channel.h  cyclic_list.h  intrusive.h  mask.cpp  mask.h  mask_filter.h  perg.h  pipe.h  proc.h  queue.h  sink.h  source.h  stage.h
pergapp/: main.cpp
tests/: CMakeLists.txt  backward_mask_filter_tests.cpp  block_list_tests.cpp  buffer_tests.cpp  cyclic_list_tests.cpp  file_reader_tests.cpp  forward_mask_filter_tests.cpp  glob_match_tests.cpp  intrusive_list_tests.cpp  list_tests.cpp  mask_filter_tests.cpp  pipeline_tests.cpp  queue_stress_tests.cpp  queue_tests.cpp  raw_file_reader_tests.cpp  rfile_reader_tests.cpp  search_result_tests.cpp  temp_file.h  view_tests.cpp
